fixed: on click on keyboard body keyboard closing, added: disabled: btn support, , added: functionality to shift and caps, refactored and restructured: special and normal keys, added: text-area support, TODO: in text-area onChange is not getting triggered, figure it out and fix it

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,10 @@
       ._sub {
         font-size: 70%;
         margin-bottom: 7px;
+        pointer-events: none;
+      }
+      ._main {
+        pointer-events: none;
       }
       &._special {
         flex: 2;
@@ -52,7 +56,17 @@
         align-items: flex-start;
       }
       &._space {
-        flex: 9;
+        flex: 13;
+      }
+      &._active {
+        border-color: #e91e63;
+        color: #e91e63;
+      }
+      &._disabled {
+        color: #8080806b;
+        border-color: #80808057;
+        background-color: transparent;
+        cursor: not-allowed;
       }
     }
   }
